--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -18,10 +18,10 @@
         </div>
 
         <div class="options">
-            <button type="button" onclick="goToMonitoring()" class="selection">Preencher Acompanhamento</button>
-            <button type="button" onclick="goToReports()" class="selection1">Acompanhamentos</button>
+            <button type="button" onclick="goToMonitoring()" id="preencher_acompanhamento" class="selection">Preencher Acompanhamento</button>
+            <button type="button" onclick="goToReports()" id="acompanhamentos" class="selection1">Acompanhamentos</button>
             <button type="button" onclick="goToReports_Bimestrais()" class="selection1">Relatórios Bimestrais</button>
-            <button type="button" onclick="goToOKRs()" class="selection1">OKRs</button>        
+            <button type="button" onclick="goToOKRs()" id="okrs" class="selection1">OKRs</button>        
             
         </div>
     </div>
@@ -82,5 +82,6 @@
 <script src="../../firebase-init.js"></script>
 <script src="../../auth-guard.js"></script>
 <script src="home.js"></script>
+<script src="../../verifica_function.js"></script>
 <script src="../../logout.js"></script>
 </html>
