--- a/pages/monitoring/monitor.html
+++ b/pages/monitoring/monitor.html
@@ -46,6 +46,7 @@
                     <div class="text-range">
                         <input type="text"placeholder="problema 01" id="p1_1" class="problem">
                         <input type="range" min="0" max="100" step="1" id="sp1_1" value="0">
+                        <p class="percent" id="psp1_1">0%</p>
                         <select class="select" id="ssp1_1">
                             <option>--Selecione o Tipo de Problema</option>
                             <option>Comunicação</option>
@@ -59,6 +60,7 @@
                     <div class="text-range">
                         <input type="text"placeholder="problema 02" id="p1_2" class="problem">
                         <input type="range" min="0" max="100" step="1" id="sp1_2" value="0">
+                        <p class="percent" id="psp1_2">0%</p>
                         <select class="select" id="ssp1_2">
                             <option>--Selecione o Tipo de Problema</option>
                             <option>Comunicação</option>
@@ -72,6 +74,7 @@
                     <div class="text-range">
                         <input type="text"placeholder="problema 03" id="p1_3" class="problem">
                         <input type="range" min="0" max="100" step="1" id="sp1_3" value="0">
+                        <p class="percent" id="psp1_3">0%</p>
                         <select class="select" id="ssp1_3">
                             <option>--Selecione o Tipo de Problema</option>
                             <option>Comunicação</option>
@@ -85,6 +88,7 @@
                     <div class="text-range">
                         <input type="text"placeholder="problema 04" id="p1_4" class="problem">
                         <input type="range" min="0" max="100" step="1" id="sp1_4" value="0">
+                        <p class="percent" id="psp1_4">0%</p>
                         <select class="select" id="ssp1_4">
                             <option>--Selecione o Tipo de Problema</option>
                             <option>Comunicação</option>
@@ -98,6 +102,7 @@
                     <div class="text-range">
                         <input type="text"placeholder="problema 05" id="p1_5" class="problem">
                         <input type="range" min="0" max="100" step="1" id="sp1_5" value="0">
+                        <p class="percent" id="psp1_5">0%</p>
                         <select class="select" id="ssp1_5">
                             <option>--Selecione o Tipo de Problema</option>
                             <option>Comunicação</option>
@@ -318,56 +323,68 @@
                 </div>
                 <div class="text-range">
                     <p class="fixed">Confiança:</p>
-                    <input type="range" min="0" max="100" step="1" id="sp7_1" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp7_1" value="0">   
+                    <p class="percent" id="psp7_1">0%</p> 
                 </div>
                 <div class="text-range">
                     <p class="fixed">Confortável:</p>
-                    <input type="range" min="0" max="100" step="1" id="sp7_2" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp7_2" value="0">
+                    <p class="percent" id="psp7_2">0%</p>    
                 </div>
                 <div class="text-range">
                     <p class="fixed">Desafiado:</p>
-                    <input type="range" min="0" max="100" step="1" id="sp7_3" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp7_3" value="0"> 
+                    <p class="percent" id="psp7_3">0%</p>   
                 </div>
                 <div class="text-range">
                     <p class="fixed">Bem-estar:</p>
-                    <input type="range" min="0" max="100" step="1" id="sp7_4" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp7_4" value="0">   
+                    <p class="percent" id="psp7_4">0%</p> 
                 </div>
                 <div class="text-range">
                     <p class="fixed">Estrosamento entre os membros:</p>
                     <input type="range" min="0" max="100" step="1" id="sp7_5" value="0">    
+                    <p class="percent" id="psp7_5">0%</p>
                 </div>
                 
                 <!-- Pergunta 08-->
                 <div class="justify">
-                    <label>8 - AVALIE DE MANEIRA GERAL O DESENVOLVIMENTO DOS MEMBROS DA SUA DIRETORIA ESTA SEMANA:</label>
+                    <label id="projetos_lerdo">8 - AVALIE DE MANEIRA GERAL O DESENVOLVIMENTO DOS MEMBROS DA SUA DIRETORIA ESTA SEMANA:</label>
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Nome e Sobrenome" id="p8_1" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="sp8_1" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp8_1" value="0">
+                    <p class="percent" id="psp8_1">0%</p>    
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Nome e Sobrenome" id="p8_2" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="sp8_2" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp8_2" value="0">
+                    <p class="percent" id="psp8_2">0%</p>    
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Nome e Sobrenome" id="p8_3" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="sp8_3" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp8_3" value="0">  
+                    <p class="percent" id="psp8_3">0%</p>  
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Nome e Sobrenome" id="p8_4" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="sp8_4" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp8_4" value="0">   
+                    <p class="percent" id="psp8_4">0%</p> 
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Nome e Sobrenome" id="p8_5" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="sp8_5" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp8_5" value="0">
+                    <p class="percent" id="psp8_5">0%</p>    
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Nome e Sobrenome" id="p8_6" class="problem">
                     <input type="range" min="0" max="100" step="1" id="sp8_6" value="0">    
+                    <p class="percent" id="psp8_6">0%</p>
                 </div>
                 <div class="text-range">
                     <p class="fixed">SEU PRÓPRIO DESENVOLVIMENTO</p>
-                    <input type="range" min="0" max="100" step="1" id="sp8_7" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp8_7" value="0">  
+                    <p class="percent" id="psp8_7">0%</p>  
                 </div>
 
                 <!-- Pergunta 09-->
@@ -376,15 +393,18 @@
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="1° em atraso" id="p9_1" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="sp9_1" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp9_1" value="0">
+                    <p class="percent" id="psp9_1">0%</p>      
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="2° em atraso" id="p9_2" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="sp9_2" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp9_2" value="0">
+                    <p class="percent" id="psp9_2">0%</p>
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="3° em atraso" id="p9_3" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="sp9_3" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="sp9_3" value="0">  
+                    <p class="percent" id="psp9_3">0%</p>
                 </div>
 
 
@@ -397,35 +417,40 @@
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Ação planejada n° 1" id="pe1" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="spe1_1" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="spe1_1" value="0"> 
+                    <p class="percent" id="pspe1_1">0%</p>   
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Informe-nos o motivo da ação estar com este nível de conclusão, esteja ela atrasada ou não ..." id="pe1_1" class="problem">
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Ação planejada n° 2" id="pe2" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="spe1_2" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="spe1_2" value="0">
+                    <p class="percent" id="pspe1_2">0%</p>
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Informe-nos o motivo da ação estar com este nível de conclusão, esteja ela atrasada ou não ..." id="pe1_2" class="problem">
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Ação planejada n° 3" id="pe3" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="spe1_3" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="spe1_3" value="0">
+                    <p class="percent" id="pspe1_3">0%</p>
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Informe-nos o motivo da ação estar com este nível de conclusão, esteja ela atrasada ou não ..." id="pe1_3" class="problem">
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Ação planejada n° 4" id="pe4" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="spe1_4" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="spe1_4" value="0">
+                    <p class="percent" id="pspe1_4">0%</p> 
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Informe-nos o motivo da ação estar com este nível de conclusão, esteja ela atrasada ou não ..." id="pe1_4" class="problem">
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Ação planejada n° 5" id="pe5" class="problem">
-                    <input type="range" min="0" max="100" step="1" id="spe1_5" value="0">    
+                    <input type="range" min="0" max="100" step="1" id="spe1_5" value="0">
+                    <p class="percent" id="pspe1_5">0%</p>
                 </div>
                 <div class="text-range">
                     <input type="text"placeholder="Informe-nos o motivo da ação estar com este nível de conclusão, esteja ela atrasada ou não ..." id="pe1_5" class="problem">
@@ -438,7 +463,7 @@
                 </div>
                 <input type="text"placeholder="Sinta-se livre para fazer comentários e nos dar feedbacks sobre o novo acompanhamento" id="feedback" class="problem">
 
-                <button type="button" class="save" onclick="saveReport()">Salvar e Enviar</button>
+                <button type="button" class="save" onclick="saveReport(), insert()">Salvar e Enviar</button>
                 <button type="button"  onclick="cancel()">Cancelar</button>
             </form>
         </div>
@@ -456,6 +481,9 @@
 <script src="../../logout.js"></script>
 <script src="../../loading.js"></script>
 <script src="monitor.js"></script>
+<script src="atualize_percent.js"></script>
+<script src="verifica_projetos_director.js"></script>
+<script src="insert_local_storage.js"></script>
 <script src="../../time.js"></script>
 <script src="../../key-document.js"></script>
 <script src="../home/home.js"></script>
