Alteração nas Páginas
Alterada página de relatórios bimestrais: Gráfico que contabiliza o número de ações concluídas não estava funcionando como esperado, adicionei um condicional na estrutura que faz a contagem afim de evitar que capturasse o valor do nível de complexidade da ação quando o usuário não a define, assim quando não difinido o nivel de complexidade, a mesma não entrará para a contagem na geração do gráfico.
Criação de página que gera tabela dos membros que responderam os formulários de bem estar e compromisso.

--- a/pages/reports_bimestrais/reports_bimestrais.html
+++ b/pages/reports_bimestrais/reports_bimestrais.html
@@ -272,7 +272,12 @@
                             </select>
                         </div>
                         <button type="button" onclick="searchYear()">Gerar Relatório Bimestral</button>
-                        <button type="button" class="outline" onclick="creatForm()" id="creat_form">Gerar Formulários de Bem-Estar e Compromisso</button>
+                        <div id="creat_report_form">
+                            <div class="WhiteLine"></div>
+                            <button type="button" class="outline" onclick="geratedForm()" id="creat_form">Visualizar Tabelas de Bem-Estar e Compromisso</button>
+                            <button type="button" class="outline" onclick="creatForm()" id="gerated_form">Gerar Relatório de Bem-Estar e Compromisso</button>
+                        </div>
+                        
                         <div class="WhiteLine"></div>
                         <div id="Relatorio">
                             <p class="paragrafoP">
